adds tests to ensure each dataset works

--- a/scripts/regressions.ipynb
+++ b/scripts/regressions.ipynb
@@ -26,13 +26,23 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"JAX_PLATFORM_NAME\"] = \"cpu\""
+    "# os.environ[\"JAX_PLATFORM_NAME\"] = \"cpu\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import adaptive_latents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-03T14:41:21.104905Z",
@@ -44,18 +54,18 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import bubblewrap as bw\n",
-    "import bubblewrap.input_sources.functional as fin\n",
+    "import adaptive_latents.input_sources.functional as fin\n",
     "import tqdm as tqdm\n",
-    "from bubblewrap.input_sources.data_sources import NumpyTimedDataSource\n",
-    "import bubblewrap.plotting_functions as bpf\n",
+    "from adaptive_latents import NumpyTimedDataSource\n",
+    "import adaptive_latents.plotting_functions as bpf\n",
+    "import adaptive_latents.input_sources.datasets as datasets\n",
     "import sklearn.decomposition\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "5",
    "metadata": {
     "tags": []
    },
@@ -77,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {
     "tags": []
    },
@@ -92,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {
     "tags": []
    },
@@ -122,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {
     "tags": []
    },
@@ -152,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {
     "tags": []
    },
@@ -163,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-03T14:41:29.649130Z",
@@ -173,13 +183,13 @@
    },
    "outputs": [],
    "source": [
-    "obs, raw_behavior, obs_t, beh_t = fin.construct_fly_data(fin.datasets[\"fly\"][0])"
+    "obs, raw_behavior, obs_t, beh_t = datasets.construct_fly_data(datasets.individual_identifiers[\"fly\"][0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-03T14:41:31.392117Z",
@@ -196,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-03T14:41:39.121788Z",
@@ -232,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "13",
    "metadata": {
     "tags": []
    },
@@ -243,19 +253,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "obs, raw_behavior, bin_centers, beh_t = fin.construct_buzaki_data(base=fin.datasets[\"buzaki\"][0], bin_size=0.03)"
+    "obs, raw_behavior, bin_centers, beh_t = adaptive_latents.input_sources.datasets.construct_buzaki_data(base=adaptive_latents.input_sources.datasets.individual_identifiers[\"buzaki\"][0], bin_size=0.03)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "17",
    "metadata": {
     "tags": []
    },
@@ -299,19 +309,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "obs, raw_behavior, bin_centers, beh_t = fin.construct_indy_data(fin.datasets[\"indy\"][0])"
+    "obs, raw_behavior, bin_centers, beh_t = adaptive_latents.input_sources.datasets.construct_indy_data(\n",
+    "    adaptive_latents.input_sources.datasets.individual_identifiers[\"indy\"][0],\n",
+    "    bin_width=0.03,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,24 +352,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "21",
    "metadata": {
     "tags": []
    },
    "source": [
     "## Musal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "ca, vid, t_ca, t_vid = fin.generate_musal_dataset(cam=1, video_target_dim=6, resize_factor=1, prosvd_init_size=100)"
    ]
   },
   {
@@ -368,13 +369,25 @@
    },
    "outputs": [],
    "source": [
-    "resampled_vid = fin.resample_behavior(vid, t_ca, t_vid)"
+    "ca, vid, t_ca, t_vid = adaptive_latents.input_sources.datasets.generate_musal_dataset(cam=1, video_target_dim=6, resize_factor=1, prosvd_init_size=100)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "23",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "resampled_vid = fin.resample_behavior(vid, t_ca, t_vid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "25",
    "metadata": {
     "tags": []
    },
@@ -401,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {
     "tags": []
    },
@@ -414,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {
     "tags": []
    },
@@ -432,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "source": [
     "# Run Stuff"
@@ -440,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "29",
    "metadata": {
     "tags": []
    },
@@ -452,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-03T14:41:44.511511Z",
@@ -493,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30",
+   "id": "31",
    "metadata": {
     "tags": []
    },
@@ -505,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "32",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-03T14:42:08.250368Z",
@@ -527,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "33",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-03T14:42:10.383900Z",
@@ -547,7 +560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33",
+   "id": "34",
    "metadata": {},
    "source": [
     "## Run Table"
@@ -556,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "35",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-03T14:42:14.658506Z",
@@ -566,7 +579,7 @@
    },
    "outputs": [],
    "source": [
-    "def evaluate(i,o, maxlen=5_000, bw_params=bw.default_parameters.default_jpca_dataset_parameters, seed=0):\n",
+    "def evaluate(i,o, maxlen=5_000, bw_params=adaptive_latents.default_parameters.default_jpca_dataset_parameters, seed=0):\n",
     "    \"\"\"\n",
     "    run bubblewrap on dataset i (the inputs) and run a regression on dataset o (the target outputs)\n",
     "    \n",
@@ -590,12 +603,12 @@
     "    i_dt = np.median(np.diff(i_t))\n",
     "    n_steps = int(np.ceil(o_dt/i_dt))\n",
     "        \n",
-    "    br = bw.bw_run.simple_bw_run(input_arr=i,t=i_t, time_offsets=[0,n_steps], bw_params=bw_params)\n",
+    "    br = adaptive_latents.bw_run.simple_bw_run(input_arr=i,t=i_t, time_offsets=[0,n_steps], bw_params=bw_params)\n",
     "    \n",
     "    \n",
     "    alpha_dict = br.alpha_history\n",
     "    a_current, a_ahead, o, o_t = fin.clip(alpha_dict[0], alpha_dict[n_steps], o, o_t)\n",
-    "    reg = bw.regressions.SymmetricNoisyRegressor(input_d=a_current.shape[1], output_d=o.shape[1])\n",
+    "    reg = adaptive_latents.regressions.SymmetricNoisyRegressor(input_d=a_current.shape[1], output_d=o.shape[1])\n",
     "    \n",
     "    pred, true, times = br.add_regressor_post_hoc(reg, o, o_t, test_offset=n_steps)\n",
     "    return br, pred, true, times\n"
@@ -604,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "36",
    "metadata": {
     "tags": []
    },
@@ -614,7 +627,7 @@
     "# this cell evaluates each element of the table specified above using the `evaluate` function\n",
     "\n",
     "bw_params = dict(    \n",
-    "    bw.default_parameters.default_jpca_dataset_parameters, \n",
+    "    adaptive_latents.default_parameters.default_jpca_dataset_parameters, \n",
     "num=100,\n",
     "eps=1e-3,\n",
     "step=1,\n",
@@ -641,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,24 +693,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37",
+   "id": "38",
    "metadata": {
     "tags": []
    },
    "source": [
     "## Table summary for Sheets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "row_to_break_out = \"s(obs,6)\""
    ]
   },
   {
@@ -709,13 +710,25 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(brs).T"
+    "row_to_break_out = \"s(obs,4)\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "40",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(brs).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41",
    "metadata": {
     "tags": []
    },
@@ -734,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "42",
    "metadata": {
     "tags": []
    },
@@ -749,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "43",
    "metadata": {
     "tags": []
    },
@@ -762,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "44",
    "metadata": {
     "tags": []
    },
@@ -774,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "45",
    "metadata": {
     "tags": []
    },
@@ -792,22 +805,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45",
+   "id": "46",
    "metadata": {},
    "source": [
     "## Optimizing parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "datasets.keys() # this is so I have the text of the keys ready to copy-paste"
    ]
   },
   {
@@ -819,21 +820,33 @@
    },
    "outputs": [],
    "source": [
-    "brs2 = [] # this is a history of bubblewrap runs; reset it when the plots are getting too full"
+    "datasets.keys() # this is so I have the text of the keys ready to copy-paste"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "48",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "brs2 = [] # this is a history of bubblewrap runs; reset it when the plots are getting too full"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
-    "brs2.append(evaluate(i=datasets['s(obs,6)'], o=datasets['s(obs,6)'], maxlen=5_000, \n",
+    "brs2.append(evaluate(i=datasets['s(obs,4)'], o=datasets['s(obs,4)'], maxlen=5_000, \n",
     "                     bw_params=\n",
     "                     dict(\n",
-    "                        bw.default_parameters.default_jpca_dataset_parameters,\n",
+    "                        adaptive_latents.default_parameters.default_jpca_dataset_parameters,\n",
     "                        num=100,\n",
     "                        eps=1e-5,\n",
     "                        step=.5,\n",
@@ -845,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "50",
    "metadata": {
     "tags": []
    },
@@ -860,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50",
+   "id": "51",
    "metadata": {
     "tags": []
    },
@@ -871,7 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "52",
    "metadata": {
     "tags": []
    },
@@ -883,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "53",
    "metadata": {
     "tags": []
    },
@@ -896,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "54",
    "metadata": {
     "tags": []
    },
@@ -918,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "55",
    "metadata": {
     "tags": []
    },
@@ -930,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "56",
    "metadata": {
     "tags": []
    },
@@ -952,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "57",
    "metadata": {
     "tags": []
    },
@@ -968,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "58",
    "metadata": {
     "tags": []
    },
@@ -985,7 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "59",
    "metadata": {
     "tags": []
    },
@@ -1011,7 +1024,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
