adds code to load the jenkins dataset

--- a/scripts/icca.ipynb
+++ b/scripts/icca.ipynb
@@ -185,7 +185,9 @@
    "source": [
     "x_d = 2\n",
     "y_d = 2\n",
-    "xs, ys, hidden_vars = generate_pcca(x_d=x_d, y_d=y_d)"
+    "xs, ys, hidden_vars = generate_pcca(x_d=x_d, y_d=y_d, cov_scaler=.1)\n",
+    "xs -= xs.mean(axis=0)\n",
+    "ys -= ys.mean(axis=0)"
    ]
   },
   {
@@ -212,9 +214,9 @@
     "evals, evecs = np.linalg.eig(mat_1 @ mat_2)\n",
     "idx = np.argmax(np.abs(evals))\n",
     "x_v = evecs[:x_d,idx]\n",
-    "x_v /= np.linalg.norm(x_v)\n",
+    "# x_v /= np.linalg.norm(x_v)\n",
     "y_v = evecs[:y_d,idx]\n",
-    "y_v /= np.linalg.norm(y_v)"
+    "# y_v /= np.linalg.norm(y_v)"
    ]
   },
   {
@@ -236,12 +238,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cca.x_loadings_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cca.x_rotations_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig, axs = plt.subplots(nrows=1,ncols=3, figsize=(11,5))\n",
     "axs[0].plot(xs[:,0], xs[:,1], '.')\n",
     "ellipse_points = (np.linalg.cholesky(sigma_x_hat) @ circle_points).T + xs.mean(axis=0)\n",
     "axs[0].plot(ellipse_points[:,0], ellipse_points[:,1], color=\"C0\")\n",
     "axs[0].plot([0, x_v[0]], [0, x_v[1]], '--')\n",
-    "axs[0].plot([0, hidden_vars['W_x'][0,0]], [0, hidden_vars['W_x'][1,0]], '-', color='C1', alpha=.5)\n",
+    "# axs[0].plot([0, hidden_vars['W_x'][0,0]], [0, hidden_vars['W_x'][1,0]], '-', color='C1', alpha=.5)\n",
     "axs[0].axis(\"equal\")\n",
     "axs[0].set_title(\"X\")\n",
     "\n",
@@ -249,17 +271,17 @@
     "ellipse_points = (np.linalg.cholesky(sigma_y_hat) @ circle_points).T + ys.mean(axis=0)\n",
     "axs[2].plot(ellipse_points[:,0], ellipse_points[:,1], color=\"C0\")\n",
     "axs[2].plot([0, y_v[0]], [0, y_v[1]], '--')\n",
-    "axs[2].plot([0, hidden_vars['W_y'][0,0]], [0, hidden_vars['W_y'][1,0]], '-', color='C1', alpha=.5)\n",
+    "# axs[2].plot([0, hidden_vars['W_y'][0,0]], [0, hidden_vars['W_y'][1,0]], '-', color='C1', alpha=.5)\n",
     "axs[2].axis(\"equal\")\n",
     "axs[2].set_title(\"Y\")\n",
     "\n",
-    "axs[1].plot(xs @ x_v, ys@y_v, '.', color=\"C1\")"
+    "axs[1].plot(xs @ x_v, ys@y_v, '.', color=\"C1\");"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,6 +295,17 @@
     "\n",
     "plt.axvline(np.abs(np.corrcoef(xs @ x_v, ys @ y_v)[0,1]), color='red')\n",
     "plt.hist(rs, bins=200);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20",
+   "metadata": {},
+   "source": [
+    "* [background](https://gregorygundersen.com/blog/2018/07/17/cca/)\n",
+    "* [iterative](https://doi.org/10.3390/app10217827)\n",
+    "\n",
+    "* [projection pursuit](https://en.wikipedia.org/wiki/Projection_pursuit)"
    ]
   }
  ],
