adds summary plots for datasets

--- a/scripts/latents_exploration.ipynb
+++ b/scripts/latents_exploration.ipynb
@@ -9,12 +9,17 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.cross_decomposition import CCA\n",
+    "from sklearn.cross_decomposition import CCA, PLSRegression\n",
     "import adaptive_latents as al\n",
     "# from nlb_tools.nwb_interface import NWBDataset\n",
     "from pynwb import NWBHDF5IO\n",
     "import pandas as pd\n",
-    "\n",
+    "from collections import namedtuple\n",
+    "import adaptive_latents\n",
+    "from functools import lru_cache\n",
+    "import matplotlib\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "rng = np.random.default_rng()"
    ]
@@ -26,7 +31,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ls /home/jgould/Documents/Bubblewrap/generated/datasets/000128/sub-Jenkins/"
+    "fpath = al.CONFIG[\"data_path\"] / '000128'/ 'sub-Jenkins'/ 'sub-Jenkins_ses-full_desc-train_behavior+ecephys.nwb'\n",
+    "\n",
+    "nwb_in = NWBHDF5IO(fpath, \"r\").read()"
    ]
   },
   {
@@ -36,7 +43,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fpath"
+    "trials = nwb_in.intervals['trials'].to_dataframe()\n",
+    "trial_types = trials[\"trial_type\"].unique()\n",
+    "\n",
+    "hand_pos = np.array(nwb_in.processing['behavior'].data_interfaces['hand_pos'].data)\n",
+    "hand_t = np.array(nwb_in.processing['behavior'].data_interfaces['hand_pos'].timestamps)\n",
+    "\n",
+    "units = nwb_in.units.to_dataframe()"
    ]
   },
   {
@@ -46,10 +59,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fpath = al.CONFIG[\"data_path\"] / '000128'/ 'sub-Jenkins'/ 'sub-Jenkins_ses-full_desc-train_behavior+ecephys.nwb'\n",
+    "def intersection(start1, stop1, start2, stop2):\n",
+    "    return max(min(stop1, stop2) - max(start1, start2),0)\n",
     "\n",
-    "nwb_in = NWBHDF5IO(fpath, \"r\").read()\n",
-    "nwb_in"
+    "@lru_cache(maxsize=None)\n",
+    "def make_experiment_slice(start_time, stop_time, bin_width=0.03):\n",
+    "    bin_edges = np.arange(start_time, stop_time, bin_width)\n",
+    "    \n",
+    "    A = np.zeros((len(bin_edges)-1, units.shape[0]))\n",
+    "    \n",
+    "    for i in range(units.shape[0]):\n",
+    "        A[:,i], _ = np.histogram(units.iloc[i,1], bin_edges)\n",
+    "\n",
+    "    recorded_intervals = units.iloc[0,2]\n",
+    "    interval_to_start_from = 0\n",
+    "    for i in range(len(bin_edges)-1):\n",
+    "        bin_start = bin_edges[i]\n",
+    "        bin_stop = bin_edges[i+1]\n",
+    "        covered = 0\n",
+    "        for j in range(interval_to_start_from, recorded_intervals.shape[0]):\n",
+    "            interval_start, interval_stop = recorded_intervals[j]\n",
+    "            if bin_start > interval_stop:\n",
+    "                interval_to_start_from += 1\n",
+    "                continue\n",
+    "            if interval_start > bin_stop:\n",
+    "                break\n",
+    "            covered +=  intersection(bin_start, bin_stop, interval_start, interval_stop)\n",
+    "            \n",
+    "        if covered/bin_width < .9:\n",
+    "            A[i,:] = np.nan\n",
+    "    \n",
+    "    bin_centers = np.convolve(bin_edges,[.5, .5],'valid')\n",
+    "    beh = adaptive_latents.input_sources.functional.resample_behavior(hand_pos, bin_centers, hand_t)\n",
+    "    beh[:,1] -= -33\n",
+    "    beh[:,0] -= -2\n",
+    "    return namedtuple('ExperementSlice', ['A', 'beh', 'bin_centers'])(A, beh, bin_centers)\n",
+    "\n",
+    "\n",
+    "def get_slices_for_set(trial_type_index, trial_version, selected_set=None):\n",
+    "    if selected_set is None:\n",
+    "        selected_set = trials[(trials.trial_type == trial_types[trial_type_index]) & (trials.trial_version == trial_version)]\n",
+    "\n",
+    "    ret = []\n",
+    "    for index, row in selected_set.iterrows():\n",
+    "        slice = make_experiment_slice(row.start_time, row.stop_time, bin_width=0.03)\n",
+    "        ret.append(slice)\n",
+    "    return ret"
    ]
   },
   {
@@ -59,8 +114,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trials = nwb_in.intervals['trials'].to_dataframe()\n",
-    "trial_types = trials[\"trial_type\"].unique()"
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "for i in range(6):\n",
+    "    for slice in get_slices_for_set(trial_type_index=i, trial_version=0, selected_set=None):\n",
+    "        ax.plot(slice.beh[:,0], slice.beh[:,1], f\"C{i}\")\n",
+    "# ax.plot(reach[:,0], reach[:,1], 'C1', label=f\"type_idx {trial_type_index} version {trial_version}\")\n",
+    "# ax.legend()"
    ]
   },
   {
@@ -70,8 +130,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hand_pos = np.array(nwb_in.processing['behavior'].data_interfaces['hand_pos'].data)\n",
-    "hand_t = np.array(nwb_in.processing['behavior'].data_interfaces['hand_pos'].timestamps)"
+    "def make_to_regression_variables(slices):\n",
+    "    A = None\n",
+    "    beh = None\n",
+    "    t = []\n",
+    "    for sub_A, sub_beh, sub_t in slices:\n",
+    "        A = np.vstack([A, sub_A]) if np.any(A) else sub_A\n",
+    "        beh = np.vstack([beh, sub_beh]) if np.any(beh) else sub_beh\n",
+    "        t = np.hstack([t,sub_t])\n",
+    "\n",
+    "    no_nan_rows = np.all(np.isfinite(np.hstack([A, beh, t[:,None]])), axis=1)\n",
+    "    A = A[no_nan_rows,:]\n",
+    "    beh = beh[no_nan_rows,:]\n",
+    "    t = t[no_nan_rows]\n",
+    "    \n",
+    "    return A, beh, t\n"
    ]
   },
   {
@@ -81,7 +154,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_set = trials[(trials.trial_type == trial_types[0]) & (trials.trial_version == 0)]"
+    "# https://stackoverflow.com/a/25941474\n",
+    "def plot_with_time(ax, x, time=None):\n",
+    "    if time is None:\n",
+    "        time = np.linspace(0,1, x.shape[0])\n",
+    "    time -= min(time)\n",
+    "    time /= max(time)\n",
+    "    points = x.reshape(-1, 1, 2)\n",
+    "    segments = np.concatenate([points[:-1], points[1:]], axis=1)\n",
+    "    lc = matplotlib.collections.LineCollection(segments, array=time, cmap=plt.get_cmap('spring'))\n",
+    "    ranges = np.array([[min(x[:,0]), max(x[:,0])],\n",
+    "              [min(x[:,1]), max(x[:,1])]])\n",
+    "    centers = ranges.mean(axis=1)\n",
+    "    out = ((ranges[:,1] - ranges[:,0])/2) * 1.1\n",
+    "    frame = np.array([centers - out, centers + out]).T\n",
+    "\n",
+    "    curr_xlim = ax.get_xlim()\n",
+    "    ax.set_xlim([min(frame[0,0], curr_xlim[0]), max(frame[0,1], curr_xlim[1])])\n",
+    "    curr_ylim = ax.get_ylim()\n",
+    "    ax.set_ylim([min(frame[1,0], curr_ylim[0]), max(frame[1,1], curr_ylim[1])])\n",
+    "\n",
+    "    ax.add_collection(lc)\n",
+    "    \n",
+    "fig,ax = plt.subplots()\n",
+    "plot_with_time(ax, slice.beh, slice.bin_centers)\n",
+    "# ax.set_xlim([-80,20])\n",
+    "# ax.set_ylim([-80,20])\n",
+    "plt.show()"
    ]
   },
   {
@@ -91,11 +190,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_plot = []\n",
-    "for index, row in selected_set.iterrows():\n",
-    "    to_plot.append(hand_pos[(row.start_time < hand_t) & (hand_t < row.stop_time),:])\n",
-    "for reach in to_plot:\n",
-    "    plt.plot(reach[:,0], reach[:,1])"
+    "slices = get_slices_for_set(2,0) + get_slices_for_set(0,0) + get_slices_for_set(1,0) + get_slices_for_set(3,0) + get_slices_for_set(5,0)\n",
+    "A, beh, t = make_to_regression_variables(slices)\n",
+    "\n",
+    "reg = LinearRegression()\n",
+    "reg.fit(A, beh)\n",
+    "# beta, residuals, rank, s = np.linalg.lstsq(A, beh, rcond=None)\n",
+    "\n",
+    "fig, axs = plt.subplots(ncols=2, figsize=(10,4), sharex=True, sharey=True)\n",
+    "\n",
+    "for slice in slices:\n",
+    "    recon = reg.predict(slice.A)\n",
+    "    plot_with_time(axs[0], recon, time=slice.bin_centers)\n",
+    "    plot_with_time(axs[1], slice.beh, time=slice.bin_centers)\n"
    ]
   },
   {
@@ -105,7 +212,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "units = nwb_in.units.to_dataframe()"
+    "slices = get_slices_for_set(2,0) #+ get_slices_for_set(0,0) + get_slices_for_set(1,0) + get_slices_for_set(3,0) + get_slices_for_set(5,0)\n",
+    "train, test = train_test_split(slices, test_size = 1)\n",
+    "A, beh, t = make_to_regression_variables(train)\n",
+    "\n",
+    "# reg = CCA()\n",
+    "reg = PLSRegression()\n",
+    "# reg = LinearRegression()\n",
+    "\n",
+    "reg.fit(A, beh)\n",
+    "\n",
+    "fig, axs = plt.subplots(ncols=2, figsize=(10,4), sharex=True, sharey=True)\n",
+    "\n",
+    "SE = [0,0]\n",
+    "for slice in test:\n",
+    "    recon = reg.predict(slice.A)\n",
+    "    SE[0] += ((recon - slice.beh)**2).sum()\n",
+    "    SE[1] += recon.size\n",
+    "    plot_with_time(axs[1], recon, time=slice.bin_centers)\n",
+    "    plot_with_time(axs[0], slice.beh, time=slice.bin_centers)\n",
+    "    \n",
+    "print(SE[0]/SE[1])\n",
+    "axs[1].set_title(\"Reach predicted by PLS from neural data\")\n",
+    "axs[0].set_title(\"Reach observed\")\n",
+    "cbar = fig.colorbar(matplotlib.cm.ScalarMappable(plt.Normalize(0,1),cmap=plt.get_cmap('spring')), ax=axs[1])\n",
+    "\n",
+    "cbar.set_ticks([.1,.9])\n",
+    "cbar.set_ticklabels([\"early reach\",\"late reach\"])\n",
+    "axs[0].set_xticks([])\n",
+    "axs[0].set_yticks([]);"
    ]
   },
   {
@@ -115,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "units"
+    "np.array([x, y])"
    ]
   },
   {
@@ -125,39 +260,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bin_width = 0.03\n",
-    "bin_edges = np.arange(units.iloc[0,2][0,0], units.iloc[0,2][-1,-1] + bin_width, bin_width)\n",
-    "\n",
-    "A = np.zeros((len(bin_edges)-1, units.shape[0]))\n",
-    "\n",
-    "for i in range(units.shape[0]):\n",
-    "    A[:,i], _ = np.histogram(units.iloc[i,1], bin_edges)\n",
-    "\n",
-    "recorded_intervals = units.iloc[0,2]\n",
-    "\n",
-    "covers = []\n",
-    "\n",
-    "interval_to_start_from = 0\n",
-    "# set_trace()\n",
-    "\n",
-    "def intersection(start1, stop1, start2, stop2):\n",
-    "    return max(min(stop1, stop2) - max(start1, start2),0)\n",
-    "\n",
-    "for i in range(len(bin_edges)-1):\n",
-    "    bin_start = bin_edges[i]\n",
-    "    bin_stop = bin_edges[i+1]\n",
-    "    covered = 0\n",
-    "    for j in range(interval_to_start_from, recorded_intervals.shape[0]):\n",
-    "        interval_start, interval_stop = recorded_intervals[j]\n",
-    "        if bin_start > interval_stop:\n",
-    "            interval_to_start_from += 1\n",
-    "            continue\n",
-    "        if interval_start > bin_stop:\n",
-    "            break\n",
-    "        covered +=  intersection(bin_start, bin_stop, interval_start, interval_stop)\n",
-    "        \n",
-    "    if covered/bin_width < .9:\n",
-    "        A[i,:] = np.nan"
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(beta, '-', label=[\"x-coord\", 'y-coord'])\n",
+    "ax.set_xlabel(\"neuron index\")\n",
+    "ax.set_ylabel(\"regression $\\\\beta$\")\n",
+    "ax.legend()\n",
+    "ax.set_title(f\"Coefficients regressing neural FR's to reach pos. on type '{trial_type_index}' trials\");"
    ]
   },
   {
@@ -167,7 +275,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(A.T, aspect='auto', interpolation='nearest')"
+    "cca = CCA(n_components=2)\n",
+    "cca.fit(sanitized_A, sanitized_beh)"
    ]
   },
   {
@@ -177,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hand_pos.shape"
+    "cca.transform(sanitized_A)"
    ]
   },
   {
@@ -187,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import adaptive_latents"
+    "sanitized_A @ cca.- cca.transform(sanitized_A)"
    ]
   },
   {
@@ -197,9 +306,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "bin_centers = np.convolve(bin_edges,[.5, .5],'valid')\n",
-    "resampled_hand = adaptive_latents.input_sources.functional.resample_behavior(hand_pos, bin_centers, hand_t)"
+    "reconstructed_reaches = sanitized_A @ cca.coef_.T + cca.intercept_\n",
+    "plt.plot(*reconstructed_reaches.T)"
    ]
   },
   {
@@ -209,52 +317,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.column_stack([A, resampled_hand])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "for i in range(10):\n",
-    "    times = units[~units.heldout].iloc[i,1]\n",
-    "    plt.plot(times, times*0+i, '.', color='C0')\n",
-    "    # for times in units[~units.heldout].iloc[i,2]:\n",
-    "    #     plt.plot(times, times*0+i, '-', color='red', alpha=.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nwbfile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trials"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ls /home/jgould/Documents/Bubblewrap/generated/datasets/000128/sub-Jenkins/sub-Jenkins_ses-full_desc-train_behavior+ecephys.nwb"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import matplotlib.collections as mcoll\n",
+    "import matplotlib.path as mpath\n",
+    "\n",
+    "def colorline(\n",
+    "    x, y, z=None, cmap=plt.get_cmap('copper'), norm=plt.Normalize(0.0, 1.0),\n",
+    "        linewidth=3, alpha=1.0):\n",
+    "    \"\"\"\n",
+    "    http://nbviewer.ipython.org/github/dpsanders/matplotlib-examples/blob/master/colorline.ipynb\n",
+    "    http://matplotlib.org/examples/pylab_examples/multicolored_line.html\n",
+    "    Plot a colored line with coordinates x and y\n",
+    "    Optionally specify colors in the array z\n",
+    "    Optionally specify a colormap, a norm function and a line width\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Default colors equally spaced on [0,1]:\n",
+    "    if z is None:\n",
+    "        z = np.linspace(0.0, 1.0, len(x))\n",
+    "\n",
+    "    # Special case if a single number:\n",
+    "    if not hasattr(z, \"__iter__\"):  # to check for numerical input -- this is a hack\n",
+    "        z = np.array([z])\n",
+    "\n",
+    "    z = np.asarray(z)\n",
+    "\n",
+    "    segments = make_segments(x, y)\n",
+    "    lc = mcoll.LineCollection(segments, array=z, cmap=cmap, norm=norm,\n",
+    "                              linewidth=linewidth, alpha=alpha)\n",
+    "\n",
+    "    ax = plt.gca()\n",
+    "    ax.add_collection(lc)\n",
+    "\n",
+    "    return lc\n",
+    "\n",
+    "\n",
+    "def make_segments(x, y):\n",
+    "    \"\"\"\n",
+    "    Create list of line segments from x and y coordinates, in the correct format\n",
+    "    for LineCollection: an array of the form numlines x (points per line) x 2 (x\n",
+    "    and y) array\n",
+    "    \"\"\"\n",
+    "\n",
+    "    points = np.array([x, y]).T.reshape(-1, 1, 2)\n",
+    "    segments = np.concatenate([points[:-1], points[1:]], axis=1)\n",
+    "    return segments\n",
+    "\n",
+    "N = 10\n",
+    "np.random.seed(101)\n",
+    "x = np.random.rand(N)\n",
+    "y = np.random.rand(N)\n",
+    "fig, ax = plt.subplots()\n",
+    "plt.style.use('default')\n",
+    "\n",
+    "# path = mpath.Path(np.column_stack([x, y]))\n",
+    "# verts = path.interpolated(steps=3).vertices\n",
+    "x, y = slice.beh.T\n",
+    "z = np.linspace(0, 1, len(x))\n",
+    "colorline(x, y, z, cmap=plt.get_cmap('spring'), linewidth=2)\n",
+    "ax.set_xlim([-80, 20])\n",
+    "ax.set_ylim([-90, 20])"
    ]
   }
  ],
